class PersonalExpenseStrings {
  static const expenses = "Expenses";

  static const accommodationCategory = "Accommodation";
  static const foodCategory = "Food";
  static const shoppingCategory = "Shopping";
  static const travelCategory = "Travel";
  static const utilitiesCategory = "Utilities bills";

  static const categoryImagesMap = {
    PersonalExpenseStrings.accommodationCategory:
        "assets/images/accommodation.png",
    PersonalExpenseStrings.foodCategory: "assets/images/food.png",
...
  static const submit = "Submit";
  static const success = "Success!";
  static const error = "Error!";
  static const expenseErrorMessage =
      "Unable to save expense details. Please check all the information provided.";
  static const expenseSavedMessage = "Expense details saved successfully.";
  static const ok = "OK";

  static const delete = "Delete";
  static const edit = "Edit";
  static const expenseDeletedMessage =
      "Expense record has been deleted successfully.";
  static const defaultCategoryOption = "All";
...
